Bug 1156021 - Use containing block inline-size (as appropriate for writing mode) to compute text-indent when specified as percentage. r=dbaron